# darknet

./: CMakeLists.txt
cfg/: coco.data
examples/: detector.c  rnn.c
include/: darknet.h
include/darknet/: awiros_drivers.h
src/: image.c  list.c  option_list.c  parser.c
